--- a/index.html
+++ b/index.html
@@ -1,1 +1,97 @@
-html
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>Dababy-Pizaa</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:500,700&display=swap&subset=latin-ext" rel="stylesheet">
+  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+  <link href="css/style.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+
+  <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+</head>
+
+<body>
+
+
+  <header>
+    <h1><i class="fa fa-cutlery" aria-hidden="true"></i> Dababy-Pizza</h1>
+  </header>
+  <main>
+    <section id="order-list">
+      <h2>Order(s)</h2>
+
+      <!-- Cart -->
+      <nav class="cart">
+        <h3>List of orders: <span>0Ksh</span></h3>
+        <ol id="listOfOrders">
+        </ol>
+        <a class="btnStyle btnStyle3 finishOrder">Finish Order</a>
+      </nav>
+
+    </section>
+    <section id="menu">
+      <h2>Menu</h2>
+
+      <!-- Recipe 1 -->
+      <div class="recipe">
+        <img src="../images/dababy2.jpg" style="width:400px; height:140px"> <br>
+      </div>
+      <div class="side">
+        <p class="name">As the leading pizza brand , Dababy Pizaa continues to deliver the best-tasting pizza using only the freshest ingredients. The pizza dough is made fresh daily in store. Our slogan, “Fresh Pizza!” captures the reason why
+          friends, colleagues and families come to enjoy our famous pizzas. And with a great range to choose from, Dababy satisfies any hungry belly. Dababy Pizaa can be found in food courts boasting bright and contemporary décor..</p>
+        <a class="btnStyle3 btnStyle addToCart" id="addToCartHamburger">Buy</a>
+      </div>
+      <div id="checkOrderHamburger" title="Pizza">
+        <h3 class="listHeading">Size:</h3>
+        <ul class="size" id="size">
+          <li><input type="checkbox" value="500" checked>Small</li>
+          <li><input type="checkbox" value="750">Medium</li>
+          <li><input type="checkbox" value="100">Large</li>
+
+        </ul>
+        <h3 class="listHeading">Toppings:</h3>
+        <ul class="listOfIngredients" id="recipe1">
+          <li><input type="checkbox" checked>Pepperoni</li>
+          <li><input type="checkbox" checked>Mushrooms</li>
+          <li><input type="checkbox" checked>Onions</li>
+          <li><input type="checkbox" checked>pancetta</li>
+
+        </ul>
+        <a class="btnStyle3 btnStyle addIngredient">Add</a>
+        <a class="btnStyle listOver">Done</a>
+        <h4 class="totalDialog" id="totalDialog1">Total: <span>15</span>Ksh</h4>
+
+      </div>
+
+      <div id="finishOrderDialog" title="Confirm Order">
+        <div id="finalOrderList">
+          <h3>Your Orders:</h3>
+          <ol></ol>
+        </div>
+        <div id="buyerInfo">
+          <input type="text" id="buyerName" placeholder="Enter Name">
+          <input type="text" id="buyerNumber" placeholder="Enter Phone Number">
+          <input type="text" id="buyerAddress" placeholder="Location">
+
+          <a class="btnStyle order">Order!</a>
+        </div>
+      </div>
+
+      <div id="thanksMessage">
+        <h1>Thank you for the order</h1>
+        <h3>We will have it delivered soon to <span id="guests"></span></h3>
+      </div>
+  </main>
+  <script type="text/javascript" src="../js/script.js"></script>
+</body>
+
+</html>
