--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <h3>We will have it delivered soon to <span id="guests"></span></h3>
       </div>
   </main>
-  <script type="text/javascript" src="../js/script.js"></script>
+  <script type="text/javascript" src=js/script.js"></script>
 </body>
 
 </html>
