--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
       <!-- Recipe 1 -->
       <div class="recipe">
-        <img src="../images/dababy2.jpg" style="width:400px; height:140px"> <br>
+        <img src="images/dababy2.jpg" style="width:400px; height:140px"> <br>
       </div>
       <div class="side">
         <p class="name">As the leading pizza brand , Dababy Pizaa continues to deliver the best-tasting pizza using only the freshest ingredients. The pizza dough is made fresh daily in store. Our slogan, “Fresh Pizza!” captures the reason why
