--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="menu">
       <h2>Menu</h2>
       <div class="recipe">
-        <img src="images/dababy2.jpg" style="width:400px; height:140px"> <br>
+        <img src="Images/dababy2.jpg" style="width:400px; height:140px"> <br>
       </div>
       <div class="side">
         <p class="name">As the leading pizza brand , Dababy Pizaa continues to deliver the best-tasting pizza using only the freshest ingredients. The pizza dough is made fresh daily in store. Our slogan, “Fresh Pizza!” captures the reason why
@@ -87,7 +87,7 @@
         <h3>We will have it delivered soon to <span id="guests"></span></h3>
       </div>
   </main>
-  <script type="text/javascript" src=js/script.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
 </body>
 
 </html>
