--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="order-list">
       <h2>Order(s)</h2>
       <nav class="cart">
-        <h3>List of orders: <span>0Ksh</span></h3>
+        <h3>List of orders: <span class="red">0Ksh</span></h3>
         <ol id="listOfOrders">
         </ol>
         <a class="btnStyle btnStyle3 finishOrder">Finish Order</a>
