--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <div class="side">
         <p class="name">As the leading pizza brand , Dababy Pizaa continues to deliver the best-tasting pizza using only the freshest ingredients. The pizza dough is made fresh daily in store. Our slogan, “Fresh Pizza!” captures the reason why
           friends, colleagues and families come to enjoy our famous pizzas. And with a great range to choose from, Dababy satisfies any hungry belly. Dababy Pizaa can be found in food courts boasting bright and contemporary décor..</p>
-        <a class="btnStyle3 btnStyle addToCart" id="addToCartHamburger">Buy</a>
+        <a class="btnStyle3 btnStyle addToCart" id="addToPizza">Buy</a>
       </div>
-      <div id="checkOrderHamburger" title="Pizza">
+      <div id="checkOrderPizza" title="Pizza">
         <h3 class="listHeading">Size:</h3>
         <ul class="size" id="size">
           <li><input type="checkbox" value="500" checked>Small</li>
